# event-intelligence-platform

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  MIGRATION_READINESS.md  PROJECT_STATUS.md  README.md  docker-compose.dev.yml  pyproject.toml  requirements.lock.txt  requirements.txt
.claude/: settings.example.json  settings.json
.harness/: config.json
agents/: Dockerfile  README.md  agent_worker.py
backend/: Dockerfile  alembic.ini  entrypoint.sh
crawling/: README.md
docs/: 00_START_HERE.md  AGENT_WORKFLOW.md  API_CONTRACT.md  ARCHITECTURE.md  COLLECTOR_DESIGN.md  COMPATIBILITY_NOTES.md  COMPLIANCE_BOUNDARY.md  DATA_POLICY.md  DEPLOYMENT.md  DOCS_FINAL.md  EVENT_SCHEMA.md  FRONTEND_DESIGN.md  LLM_AGENT_DESIGN.md  OBSERVABILITY.md  PROMPT_EXPERIMENT_GUIDE.md  SKELETON_COMPLETION_CHECKLIST.md  TRD.md
examples/: operator_regulatory_event_payload.example.json
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json
outputs/: body_extraction_matrix.csv  body_ladder_probe.jsonl  dcinside_live_body_probe.jsonl  gdelt_live_body_probe.jsonl  source_condition_matrix.csv
plans/: 000_ENVIRONMENT_SETUP_PLAN.md  001_NEXT_PHASE_PLAN.md  003_APP_SCAFFOLD_EXECUTION_REPORT.md  003_APP_SCAFFOLD_PLAN.md  004_5_SKELETON_INTEGRATION_AUDIT.md  004_5_SKELETON_INTEGRATION_REPORT.md  004_POSTGRES_PERSISTENCE_REPORT.md  005_LLMCLIENT_LANGGRAPH_SKELETON_REPORT.md  006_MILVUS_VECTOR_SKELETON_PLAN.md  006_MILVUS_VECTOR_SKELETON_REPORT.md  007_RSS_COLLECTOR_RAW_EVENTS_REPORT.md  008A_RAW_EVENT_LINKAGE_OBSERVABILITY_PLAN.md  (+6 more)
(+1224 files in other folders)
